got less to work

--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,8 @@
 .Marketplace {
   background-color: black;
   color: white;
-}
-.Marketplace a {
-  color: white;
+
+  a {
+    color: white;
+  }
 }
