--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,36 @@
-.Marketplace {
-  background-color: black;
-  color: white;
+@font-face {
+  font-family: 'Prata';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/prata/v18/6xKhdSpbNNCT-vWI.ttf) format('truetype');
 }
 .Marketplace a {
   color: white;
+  text-decoration: none;
+}
+.Marketplace img {
+  height: auto;
+  max-height: 250px;
+  width: auto;
+  max-width: 250px;
+  padding: 10px;
+}
+.Marketplace .header-wrapper {
+  background-color: black;
+  color: white;
+  padding: 20px;
+}
+.Marketplace .header-wrapper nav {
+  display: flex;
+  justify-content: space-evenly;
+}
+.Marketplace .header-wrapper nav h2 {
+  font-family: "Prata", serif;
+}
+.Marketplace .header-wrapper nav h2:hover {
+  text-shadow: 2px 2px 8px #ffffff;
+}
+.Marketplace .category-wrapper {
+  background-color: white;
 }
