--- a/src/App.less
+++ b/src/App.less
@@ -1,9 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Prata&display=swap');
 
 .Marketplace {
   a {
     color: white;
     text-decoration: none;
+  }
+
+  h2,
+  h4 {
+    font-family: "Prata", serif;
   }
 
   img {
@@ -23,10 +28,6 @@
       display: flex;
       justify-content: space-evenly;
 
-      h2 {
-        font-family: "Prata", serif;
-      }
-
       h2:hover {
         text-shadow: 2px 2px 8px #ffffff;
       }
@@ -37,9 +38,9 @@
     background-color: white;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
+  }
 
-.photo {
+  .photo {
     display: grid;
     //creates 1 block
     grid-template-columns: 1fr;
@@ -53,20 +54,42 @@
       grid-column: ~"1 / -1";
       grid-row: ~"1 / -1";
     }
-    
+
     > div {
       z-index: 1;
     }
   }
 
-  .description {
+  .description-wrapper {
     opacity: 0;
     transition-property: opacity;
     transition-duration: 0.5s;
+    padding: 10px;
+
+    h4,
+    .item-title {
+      text-transform: capitalize;
+      line-height: 1;
+      font-weight: 700;
+      margin-block: 3px;
+    }
+
+    p {
+      font-family: 'Lato', sans-serif;
+      line-height: 0.5;
+      padding-left: 20px;
+    }
+
+    .description {
+      padding: 5px;
+    }
   }
 
   &:hover {
-    .description {
+    img {
+      opacity: 0.2;
+    }
+    .description-wrapper {
       opacity: 1;
     }
   }
