--- a/src/App.css
+++ b/src/App.css
@@ -58,30 +58,30 @@
 .Marketplace .photo > div {
   z-index: 1;
 }
-.Marketplace .description-wrapper {
+.description-wrapper {
   opacity: 0;
   transition-property: opacity;
   transition-duration: 0.5s;
   padding: 10px;
 }
-.Marketplace .description-wrapper h4,
-.Marketplace .description-wrapper .item-title {
+.description-wrapper h4,
+.description-wrapper .item-title {
   text-transform: capitalize;
   line-height: 1;
   font-weight: 700;
   margin-block: 3px;
 }
-.Marketplace .description-wrapper p {
+.description-wrapper p {
   font-family: 'Lato', sans-serif;
   line-height: 0.5;
   padding-left: 20px;
 }
-.Marketplace .description-wrapper .description {
+.description-wrapper .description {
   padding: 5px;
 }
-.Marketplace:hover img {
+:hover img {
   opacity: 0.2;
 }
-.Marketplace:hover .description-wrapper {
+:hover .description-wrapper {
   opacity: 1;
 }
