--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Prata&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Prata&display=swap");
 
 .Marketplace {
   a {
@@ -58,39 +58,39 @@
     > div {
       z-index: 1;
     }
-  }
-}
-
-.description-wrapper {
-  opacity: 0;
-  transition-property: opacity;
-  transition-duration: 0.5s;
-  padding: 10px;
-
-  h4,
-  .item-title {
-    text-transform: capitalize;
-    line-height: 1;
-    font-weight: 700;
-    margin-block: 3px;
+    &:hover {
+      img {
+        opacity: 0.2;
+      }
+      .description-wrapper {
+        opacity: 1;
+      }
+    }
   }
 
-  p {
-    font-family: 'Lato', sans-serif;
-    line-height: 0.5;
-    padding-left: 20px;
-  }
-
-  .description {
-    padding: 5px;
-  }
-}
-
-&:hover {
-  img {
-    opacity: 0.2;
-  }
   .description-wrapper {
-    opacity: 1;
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 0.5s;
+    padding: 10px;
+
+    h4,
+    .item-title {
+      text-transform: capitalize;
+      line-height: 1;
+      font-weight: 700;
+      margin-block: 3px;
+    }
+
+    p {
+      font-family: "Lato", sans-serif;
+      line-height: 0.5;
+      padding-left: 20px;
+      font-weight: 500;
+    }
+
+    .description {
+      padding: 5px;
+    }
   }
 }
