--- a/src/App.less
+++ b/src/App.less
@@ -78,6 +78,10 @@
     transition-property: opacity;
     transition-duration: 0.5s;
     padding: 10px;
+    height: auto;
+    max-height: 300px;
+    width: auto;
+    max-width: 300px;
 
     h4,
     span {
