--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Prata&display=swap");
 
 .Marketplace {
-
   a {
     color: white;
     text-decoration: none;
@@ -14,13 +13,12 @@
 
   img {
     height: auto;
-    max-height: 300px;
+    max-height: 350px;
     width: auto;
-    max-width: 300px;
+    max-width: 350px;
     border-radius: 10%;
-    box-shadow: 5px 6px 6px -1px rgba(0, 0, 0, 0.21); 
-      margin-block: 10px;
-      
+    box-shadow: 5px 6px 6px -1px rgba(0, 0, 0, 0.21);
+    margin-block: 10px;
   }
 
   .header-wrapper {
@@ -51,6 +49,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     align-items: center;
+    justify-items: center;
 
     img,
     // > selects all div elements under the a
@@ -63,6 +62,7 @@
     > div {
       z-index: 1;
     }
+
     &:hover {
       img {
         opacity: 0.2;
@@ -79,16 +79,19 @@
     transition-duration: 0.5s;
     padding: 10px;
     height: auto;
-    max-height: 300px;
+    max-height: 350px;
     width: auto;
-    max-width: 300px;
+    max-width: 350px;
 
     h4,
     span {
       text-transform: capitalize;
-      line-height: 1;
       font-weight: 700;
-      margin-block: 3px;
+      margin-block: -11px;
+    }
+
+    .item-title {
+      line-height: 1;
     }
 
     span {
@@ -97,24 +100,22 @@
 
     p {
       font-family: "Lato", sans-serif;
-      line-height: 0.8;
+      line-height: 0.2;
       padding-left: 20px;
       font-weight: 500;
+      font-size: 15px;
     }
 
     .description {
-      padding: 5px;
-     
+      padding: 1px;
     }
   }
 
-  @media screen and (max-width: 720px) {
-    text-align: center;
-    align-items: center;
-
+  @media screen and (max-width: 414px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
     .category-wrapper {
-     
-
       grid-template-columns: 1fr;
     }
   }
