styling for mobile WIP

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
 }
 @media screen and (max-width: 414px) {
   .Marketplace nav {
-    grid-template-columns: 1fr 1fr;
+    font-size: 14px;
   }
   .Marketplace .category-wrapper {
     grid-template-columns: 1fr;
