--- a/src/App.less
+++ b/src/App.less
@@ -117,7 +117,7 @@
 
   @media screen and (max-width: 414px) {
     nav {
-      grid-template-columns: 1fr 1fr;
+      font-size: 14px;
     }
 
     .category-wrapper {
