--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,13 @@
   background-color: black;
   color: white;
   padding: 20px;
+  width: 100%;
+  height: 100%;
 }
 .Marketplace .header-wrapper nav {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .Marketplace .header-wrapper nav a {
   grid-row: 1/2;
@@ -45,8 +49,9 @@
 }
 .Marketplace .category-wrapper {
   background-color: white;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   justify-items: center;
 }
 .Marketplace .photo {
