--- a/src/App.less
+++ b/src/App.less
@@ -25,14 +25,17 @@
     background-color: black;
     color: white;
     padding: 20px;
+    width: 100%;
+    height: 100%;
 
     nav {
-      display: grid;
-      // grid-template-columns: 1fr 1fr 1fr 1fr;
+     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
-    a {
-      grid-row: 1/2;
-    }
+      a {
+        grid-row: 1/2;
+      }
 
       h2:hover {
         text-shadow: 2px 2px 8px #ffffff;
@@ -42,8 +45,9 @@
 
   .category-wrapper {
     background-color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     justify-items: center;
   }
 
