--- a/src/App.less
+++ b/src/App.less
@@ -29,7 +29,7 @@
       color: white;
       grid-row: 1/2;
     }
-    
+
     nav {
       display: flex;
       flex-wrap: wrap;
@@ -38,6 +38,15 @@
       h2:hover {
         text-shadow: 2px 2px 8px #ffffff;
       }
+    }
+  }
+
+  .landing-page {
+    margin: 10px;
+    margin: 5% 15%;
+
+    h4 {
+      margin-bottom: -14px;
     }
   }
 
@@ -89,6 +98,16 @@
     width: auto;
     max-width: 350px;
 
+    .item-title {
+      a {
+        color: black;
+      }
+
+      &:hover {
+        text-shadow: 2px 2px 8px #595555;
+      }
+    }
+
     h4,
     span {
       text-transform: capitalize;
@@ -96,7 +115,7 @@
       margin-block: -11px;
     }
 
-    .item-title {
+    .items {
       line-height: 1;
     }
 
