--- a/src/App.less
+++ b/src/App.less
@@ -125,7 +125,12 @@
 
     .items {
       line-height: 1;
+      
+      .hide {
+        display: none;
+      }
     }
+  
 
     span {
       font-weight: bold;
