updated styling for spacing

--- a/src/App.less
+++ b/src/App.less
@@ -120,17 +120,18 @@
     span {
       text-transform: capitalize;
       font-weight: 700;
-      margin-block: -11px;
+      margin-block: -1px;
     }
 
     .items {
       line-height: 1;
-      
+      display: flex;
+      align-items: center;
+
       .hide {
         display: none;
       }
     }
-  
 
     span {
       font-weight: bold;
@@ -147,10 +148,9 @@
     .description {
       padding: 1px;
 
-       i {
-      padding-right: 3px;
-    }
-
+      i {
+        padding-right: 3px;
+      }
     }
   }
 
