--- a/src/App.css
+++ b/src/App.css
@@ -105,10 +105,12 @@
 .Marketplace .description-wrapper span {
   text-transform: capitalize;
   font-weight: 700;
-  margin-block: -11px;
+  margin-block: -1px;
 }
 .Marketplace .description-wrapper .items {
   line-height: 1;
+  display: flex;
+  align-items: center;
 }
 .Marketplace .description-wrapper .items .hide {
   display: none;
