--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 .Marketplace h2,
 .Marketplace h4 {
-  font-family: "Prata", serif;
+  font-family: 'Prata', serif;
 }
 .Marketplace img {
   height: auto;
@@ -65,6 +65,9 @@
   grid-template-rows: 1fr;
   align-items: center;
   justify-items: center;
+}
+.Marketplace .photo img {
+  display: none;
 }
 .Marketplace .photo img,
 .Marketplace .photo > div {
@@ -119,7 +122,7 @@
   font-weight: bold;
 }
 .Marketplace .description-wrapper p {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 0.2;
   padding-left: 20px;
   font-weight: 500;
