links in header works

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 .Marketplace h2,
 .Marketplace h4 {
   font-family: "Prata", serif;
+  text-transform: capitalize;
 }
 .Marketplace img {
   height: auto;
