--- a/src/App.less
+++ b/src/App.less
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Prata&display=swap");
 
 .Marketplace {
-  a {
-    text-decoration: none;
-  }
+  // a {
+  //   text-decoration: none;
+  // }
 
   h2,
   h4 {
